========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-05-08

  - Made the open/close map return by the getters not a defaultdict by default,
    so that accidentally looking up elements won't mutate it.


2017-04-30

  - Moved src/python/beancount/... to beancount/...
    The purpose is to structure this project in the most common way
    people expect it (most Python OSS projects have this structure, with the
    package name directory at the root). I've had this other structure for a
    while mainly for historical reasons. I wanted to make this clean before
    baking a final 2.0 release and switching to numbered releases.

  - Moved src/elisp/beancount.el to editors/emacs/beancount.el and made
    necessary adjustments.

  - Merged incomplete changes from booking branch to "default." The work on
    supporting self-reduction (see
    http://furius.ca/benacount/doc/self-reductions) won't be carried during 2.0,
    it will be subject of a subsequent release.

  - This concludes the merging of all the branches, which I've done in order to
    move the source to a more regular project directory (under /beancount).


2017-04-29

  - Fixed #27: IN membership operator did not have a proper precedence definition.


2017-03-19

  - Fixed minor bug with CSV importer that would occur when the file has no
    valid columns.


2017-01-26

  - (internal) Moved the implementation of booking methods to its own
    beancount.parser.booking_methods module.

  - (internal) Split up the booking methods to functions for exhaustive testing
    and allowing others to implement new methods more easily if desired.


2017-01-22

  - Added new price source fetcher from OANDA's API. It supports a large number
    of currency pairs with tickers like this "XXX_YYY", such as "EUR_USD". Use
    it like the other price sources, e.g., like this:

      bean-price -e 'USD:oanda/EUR_USD'
